# rs-simd-matrix

./: Cargo.toml
src/: lib.rs  main.rs  matrix.rs
