[package]
name = "rs-matrix-multiplication"
rust-version = "1.70.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mat_mult"
path = "src/lib.rs"

[[bin]]
name = "matrix-multiplication"
path = "src/main.rs"

[dependencies]
